--- a/MvcPL/Web.config
+++ b/MvcPL/Web.config
@@ -21,7 +21,7 @@
   </appSettings>
   <system.web>
     <customErrors mode="On" defaultRedirect="Error">
-      <error statusCode="404" redirect="/Error/Error" />
+      <error statusCode="404" redirect="/Error/NotFound" />
     </customErrors>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
