--- a/DAL.Interface/DAL.Interface.csproj
+++ b/DAL.Interface/DAL.Interface.csproj
@@ -49,7 +49,7 @@
     <Compile Include="DTO\DalTag.cs" />
     <Compile Include="DTO\DalUser.cs" />
     <Compile Include="DTO\IEntity.cs" />
-    <Compile Include="Helpers\PredicateExpressionVisitor.cs" />
+    <Compile Include="Helper\PredicateExpressionVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\IUnitOfWork.cs" />
